fix font sizes on mobile for blog

--- a/src/css/blog/blog.scss
+++ b/src/css/blog/blog.scss
@@ -126,12 +126,9 @@
     font-size: 1rem;
   }
 
-  p {
-    font-size: 1.5rem;
-  }
-
   .sub {
     opacity: 1;
+    font-size: 1.75rem;
   }
 
   .maincontent {
@@ -139,7 +136,7 @@
     margin-bottom: 5rem;
     font-weight: bold;
     text-shadow: 1px 1px 0px #000;
-    font-size: 2rem;
+    font-size: 1.25rem;
     
   }
 
